<resources>
    <string name="app_name">Bodega Olinda</string>
    <string name="qtd">Amount</string>
    <string name="estoque">Amount</string>
    <string name="novoestoque">Current amount</string>
    <string name="estoqueAtual">Current amount: %d</string>
    <string name="editstock">Edit stock: %s</string>
    <string name="editStockOption">Edit stock</string>
    <string name="preco">Price</string>
    <string name="nome">Name</string>
    <string name="categoria">Category</string>
    <string name="subcategoria">Subcategory</string>
    <string name="pedido">Orders</string>
    <string name="fornecedor">Providers</string>
    <string name="items">Items</string>
    <string name="editar">Edit</string>
    <string name="salvar">Save</string>
    <string name="detalhes">Details</string>
    <string name="produtos">Products</string>
    <string name="gerarsql">Generate SQL</string>
    <string name="sqlgerado">SQL Generated</string>
    <string name="configuracoes">Settings</string>
    <string name="configuracoesSalvas">Settings saved successfully!</string>
    <string name="barcode">Barcode</string>
    <string name="atualizarProdutos">Refresh Products</string>
    <string name="atualizarPedidos">Refresh Orders</string>
    <string name="atualizarDados">Refresh Data</string>
    <string name="stockMovement">Stock Movement: %s</string>
    <string name="tabletView">Tablet View</string>
    <string name="IPv4">IPv4</string>
    <string name="restart">Restart application to apply changes!</string>

    <plurals name="produtosAtualizados">
        <item quantity="one">%d product updated.</item>
        <item quantity="other">%d products updated.</item>
    </plurals>
    <plurals name="pedidosAtualizados">
        <item quantity="one">%d order updated.</item>
        <item quantity="other">%d orders updated.</item>
    </plurals>
    <plurals name="areYouSure">
        <item quantity="one">%d data to send. Are you sure?</item>
        <item quantity="other">%d data to send. Are you sure?</item>
    </plurals>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>
    <string name="password">Password</string>
    <string name="password2">Repeat the password</string>
    <string name="signin">Sign in</string>
    <string name="autoLogin">Auto login</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Error messages -->
    <string name="low_storage_error">Barcode detector cannot work due to low device storage</string>
    <string name="userAndPasswordDoesntMatch">User And Password Doesn\'t Match!</string>
    <string name="userDoesntExist">User Doesn\'t Exist!</string>
    <string name="userAlreadyExists">User Already Exists!</string>
    <string name="serverError">Server Error!</string>
    <string name="serverNotFound">Server not found!</string>
    <string name="connectionError">Connection error!</string>
    <string name="invalidinputs">Invalid inputs!</string>
    <string name="errorlogin">Error login!</string>
    <string name="wifiOff">WiFi off!</string>
    <string name="error">Error!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
